[package]
name = "rust_sls"
version = "0.1.0"
authors = ["Matteo Signer <matteo.signer@gmail.com>"]
description = "Sequential Line Search for Design Optimization"
license = "MIT"
repository = "https://github.com/mad-s/rust_sls"
readme = "README.md"

keywords = ["bayesian", "optimization", "bindings"]
categories = ["science"]

edition = "2018"
build = "build.rs"

[dependencies]
cpp = "0.4"

[build-dependencies]
cpp_build = "0.4"
pkg-config = "*"
cmake = "*"

