[package]
name = "rust_sls"
version = "0.1.0"
authors = ["Matteo Signer <matteo.signer@gmail.com>"]
description = "Sequential Line Search for Design Optimization"
license = "MIT"
repository = "https://github.com/mad-s/rust_sls"
readme = "README.md"

keywords = ["bayesian", "optimization", "bindings"]
categories = ["science"]

edition = "2018"
build = "build.rs"
exclude = [
  "sequential-line-search/Doxyfile",
  "sequential-line-search/build/**/*",
  "sequential-line-search/demos/**/*",
  "sequential-line-search/**/docs/**/*",
  "sequential-line-search/**/tests/**/*",
  "sequential-line-search/**/*.JPG",
  "sequential-line-search/**/*.pdf",
]

[dependencies]
cpp = "0.5.1"

[build-dependencies]
cpp_build = "0.5.1"
pkg-config = "0.3.14"
cmake = "0.1.40"

